english and format patches for GFF3.

--- a/eugene/doc/Doc_ATGpr.tex
+++ b/eugene/doc/Doc_ATGpr.tex
@@ -5,10 +5,13 @@
 \paragraph{Description}
 
 This plugin injects possible translation starts as predicted by the
-ATGpr program. The plugin reads the prediction of the
-programs from two files whose names are derived from the sequence name
-by adding the \texttt{.atgpr} and \texttt{.atgprR} suffix
-(respectively prediction for the forward and reverse strand).
+ATGpr program. This program is not available anymore and the plugin is 
+no more supported and has been removed from recent versions of EuGene.
+
+The plugin reads the prediction of the programs from two files whose
+names are derived from the sequence name by adding the \texttt{.atgpr}
+and \texttt{.atgprR} suffix (respectively prediction for the forward
+and reverse strand).
 
 The sensor is activated by setting the value 1 for the parameter
 \texttt{Sensor.ATGpr.use} in the parameter file. The score for acceptor
