--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -407,16 +407,19 @@ process is unchanged,  the prediction is just filtered. \index{CmdFlags}{[Remove
   Default is 0 (no introns).
  
 \item \texttt{Output.format}: controls the format of the textual
-  outpout. May be \texttt{o} (stdout), \texttt{d} (detailed), \texttt{l} (long),
-  \texttt{s} (short), \texttt{h} (html), \texttt{g} (gff) or \texttt{a} (araset
-  format). Default is \texttt{l}. This can be overrided using the
-  \texttt{-p} command line flag.\index{CmdFlags}{[eugene textual output format] p}
-  \texttt{o}: print the prediction on stdout using the same format than \texttt{l}.
-  All the others print the prediction in files which name are composed by the 
-  name of the sequence file (w/o the extension .fasta, .tfa, .fsa or .txt) completed by
-  \texttt{.egn.debug (d)}, \texttt{.egn (l)}, \texttt{.egn.short (s)},
-  \texttt{.html (h)}, \texttt{.gff (g)}, \texttt{.gff3 (g)} or \texttt{.egn.ara (a)}.
-  Multiple format can be selected (\texttt{ohg} for example). When GFF is requested, both GFF1 and GFF3 are produced.
+  outpout. May be \texttt{o} (stdout), \texttt{d} (detailed),
+  \texttt{l} (long), \texttt{s} (short), \texttt{h} (html), \texttt{g}
+  (gff) or \texttt{a} (araset format). Default is \texttt{l}. This can
+  be overrided using the \texttt{-p} command line
+  flag.\index{CmdFlags}{[eugene textual output format] p} \texttt{o}:
+  print the prediction on stdout using the same format than
+  \texttt{l}.  All the others print the prediction in files which name
+  are composed by the name of the sequence file (w/o the extension
+  .fasta, .tfa, .fsa or .txt) completed by \texttt{.egn.debug (d)},
+  \texttt{.egn (l)}, \texttt{.egn.short (s)}, \texttt{.html (h)},
+  \texttt{.gff (g)}, \texttt{.gff3 (g)} or \texttt{.egn.ara (a)}.
+  Multiple format can be selected (\texttt{ohg} for example). When GFF
+  is requested, both GFF1 and GFF3 are produced.
   
 \item \texttt{Output.offset}: allows to offset the nucleotide position
   of the prediction.  That is, the prediction for nucleotide at
@@ -633,22 +636,30 @@ As the example show, it is equivalent to define the parameter
 
 \subsection{\texttt{GFF3 input documentation}} 
 
-Since version 3.4b, Eugene is compliant Gff3
+Since version 3.4b, Eugene allows for Gff3-compliant input and output.
 
 \paragraph{GFF3 format}
-See http://www.sequenceontology.org/gff3.shtml for details.
-The format of a line is : <seqid> <source> <type> <start> <end> <score> <strand> <phase> <attributes> 
 
-The attributes column is composed of tags, some tag have predefined meanings according to Gff3 specification: 
-\texttt{ID,  Target, Ontology\_term}. 
-For eugene, we define more specifics attributes : 
-\texttt{is\_full\_length, target\_length, target\_sequence, database, frame\_hit, frame\_hit, score\_hit}.
+See \texttt{http://www.sequenceontology.org/gff3.shtml} for details.
+In a GF33 file, everything is line-based. The format of a line is:
 
-A new parameter is needed in eugene.par : 
+\verb!<seqid> <source> <type> <start> <end> <score> <strand> <phase><attributes>!
+
+The attributes column is composed of tags, some tags have predefined
+meanings according to Gff3 specifications. These are the tags
+\texttt{ID, Target, Ontology\_term}.  For Eugene, we define additional
+specific attributes: \texttt{is\_full\_length, target\_length,
+  target\_sequence, database, frame\_hit, frame\_hit, score\_hit}.
+
+A new parameter is needed in \texttt{eugene.par}: 
 \texttt{Gff3.SoTerms		cfg/sofa.obo}
-It's specified relatively to EUGENEDIR the file which contain all SOFA code. Currently we use the version 1.2 of 25:07:2007. Indeed to create valid gff3 file you have to use SOFA term or code. 
 
-The third column (type) of gff3 format must contain a term of SOFA, program accept the id, name and synonyms. 
+It specifies the path relatively to EUGENEDIR of the file which contains
+all SOFA codes. Currently we use the version 1.2 of 25:07:2007. In order
+to create valid gff3 file, you have to use SOFA terms or codes.
+
+The third column (type) of gff3 format must contain a term of SOFA,
+program accept the id, name and synonyms.
 
 Example of SOFA definition term :
 \begin{Verbatim}
@@ -664,7 +675,9 @@ synonym: "acceptor splice site" EXACT []
 synonym: "splice acceptor site" EXACT []
 is_a: SO:0000162 ! splice_site
 \end{Verbatim}
-The accepted type in the third columns are :
+
+The accepted types in the third columns are:
+
 \begin{itemize}
 \item\texttt{ SO:0000164}
 \item\texttt{ three\_prime\_splice\_site}
@@ -672,7 +685,8 @@ The accepted type in the third columns are :
 \item\texttt{ acceptor splice site or  acceptor\_splice\_site}
 \item\texttt{ splice acceptor site or  splice\_acceptor\_site}
 \end{itemize}
-Each plugin have they own extension, in gff3 mode you just have to add '.gff3' after the native file name.
+
+Each plugin has its own extension, in gff3 mode you just have to add '.gff3' after the native file name.
 Example if plugin \texttt{SPred} is active with gff3 input format , it will expect 
 a file named \texttt{file.SPred.gff3} ( instead of \texttt{file.SPred} in native mode)
 
