--- a/eugene/doc/Doc_Homology.tex
+++ b/eugene/doc/Doc_Homology.tex
@@ -103,28 +103,32 @@ Here is an example of the format:
 
 \paragraph{Gff3 input file format}
 
-The gff3 input mode is activated by setting the value \texttt{GFF3} for the parameter
-\texttt{Homology.format} in the parameter file.
-The plugin reads the file which name is derived from the sequence name by adding the \texttt{.tblastx.gff3}
+The gff3 input mode is activated by setting the value \texttt{GFF3}
+for the parameter \texttt{Homology.format} in the parameter file.  The
+plugin reads the file which name is derived from the sequence name by
+adding the \texttt{.tblastx.gff3} extension. Each line reads as follows:
 
 \texttt{<sequence name> <program> <sofa feature> <$b^S$> <$e^S$> <$v^S$> <strand> <.> ID=...;Target=<est name> <$bp^S$> <$ep^S$> <target strand>;frame\_hit=<$p^S$>;score\_hit=<$s^S$>}
 
-Gff3 attributes specifications :
-Required attributes : 
+Gff3 attributes specifications:\\
+Required attributes:\\ 
 	\begin{itemize}
 	\item ID
 	\item Target
 	\item target\_sequence : amino acid sequence.
 	\end{itemize}
-Optional attributes : 
+
+Optional attributes:\\ 
 	\begin{itemize}
-	\item frame\_hit represent the blast frame. It's not necessary, 
-	but if it's specified, eugene re-compute it, and check if it the same, else reject match.
+	\item frame\_hit represent the blast frame.  This information
+          can be omitted, but if it's specified, eugene will check it
+          is consistent with the similarity positions and reject the
+          information otherwise.
 	\item score\_hit :  normalized score.
 	\end{itemize}
 
 
-Here an extract of : seq14ac002535g4g5.tfa.blast0.gff3
+Here an extract of \texttt{seq14ac002535g4g5.tfa.blast0.gff3}:
 \begin{Verbatim}[fontsize=\tiny]
 seq14	tblastx	match	129	236	2e-25	+	.	ID=tblastx:seq14.1;Dbxref=tblastx:ATKIN2_100_207;Target=ATKIN2_100_207 100 207 +;frame_hit=+3;score_hit=118;target_sequence=KNVRDQQECLPSRSGRWQS*GTLSLLEQSTDRLFKL;
 seq14	tblastx	match	86	130	3e-63	-	.	ID=tblastx:seq14.2;Dbxref=tblastx:ATKIN2_102_58;Target=ATKIN2_102_58 102 58 +;frame_hit=-2;score_hit=74;target_sequence=FQIFFSCKIVFDVCF;
