--- a/eugene/doc/Doc_NG2.tex
+++ b/eugene/doc/Doc_NG2.tex
@@ -59,18 +59,21 @@ To run Netgene2, the following parameters are used (for \emph{Arabidopsis
 thaliana}): \texttt{netgene2 -a -e -p -r -s at <Fasta sequence>}.
 
 \paragraph{Gff3 input file format}
-The gff3 input mode is activated by setting the value \texttt{GFF3} for the parameter
-\texttt{NG2.format} in the parameter file.
-The plugin reads the predictions of the program from one file which
-name is derived from the sequence name by adding the \texttt{.splices.gff3}.
 
-Accepted features (third column) :
+The gff3 input mode is activated by setting the value \texttt{GFF3}
+for the parameter \texttt{NG2.format} in the parameter file.  The
+plugin reads the predictions of the program from one file which name
+is derived from the sequence name by adding the
+\texttt{.splices.gff3} extension.
+
+Accepted features (third column):\\
 \begin{itemize}
-\item  SO:0000164 or splice\_acceptor\_site ...
-\item  SO:0000163 or splice\_donor\_site ...
+\item  SO:0000164 or splice\_acceptor\_site 
+\item  SO:0000163 or splice\_donor\_site 
 \end{itemize}
-If feature isn't those, line would be rejected. The expected coordinates must correspond to the AG/GT nucleotides.
-Here an extract of : seq14ac002535g4g5.tfa.splices.gff3
+If the feature used isn't one of those, the line will be rejected. The
+expected coordinates must match the AG/GT nucleotides.  Here
+an extract of \texttt{seq14ac002535g4g5.tfa.splices.gff3}:
 \begin{Verbatim}[fontsize=\tiny]
 seq14	NG2	SO:0000163	18	19	0.586	+	.	ID=SO:0000163:seq14.1;
 seq14	NG2	SO:0000163	27	28	0.614	+	.	ID=SO:0000163:seq14.2;
