--- a/eugene/doc/Doc_NStart.tex
+++ b/eugene/doc/Doc_NStart.tex
@@ -52,18 +52,23 @@ To run NetStart, the following parameters are used (for \emph{Arabidopsis
 thaliana}): \texttt{netstart -at <Fasta sequence>}.
 
 \paragraph{Gff3 input file format}
-The gff3 input mode is activated by setting the value \texttt{GFF3} for the parameter
-\texttt{NStart.format} in the parameter file.
-Then, the plugin reads the predictions of the program from one file which
-name is derived from the sequence name by adding the \texttt{.nstart.gff3}
 
-Accepted features (third column) :
+The gff3 input mode is activated by setting the value \texttt{GFF3}
+for the parameter \texttt{NStart.format} in the parameter file.  Then,
+the plugin reads the predictions of the program from one file which
+name is derived from the sequence name by adding the
+\texttt{.nstart.gff3} extension.
+
+Accepted features (third column):\\
 \begin{itemize}
 \item  SO:0000318 or start\_codon
 \end{itemize}
-If feature isn't these, line would be rejected. The expected coordinates must correspond to the first nucleotide of the start codon.
 
-Here an extract of : seq14ac002535g4g5.tfa.starts.gff3
+If the feature used isn't one of those, the line will be rejected. The
+expected coordinates must correspond to the first nucleotide of the
+start codon.
+
+Here an extract of \texttt{seq14ac002535g4g5.tfa.starts.gff3}:
 \begin{Verbatim}[fontsize=\tiny]
 seq14	NStart	SO:0000318	64	64	0.299	+	.	ID=SO:0000318:seq14.0;
 seq14	NStart	SO:0000318	74	74	0.249	+	.	ID=SO:0000318:seq14.1;
