--- a/eugene/doc/Doc_PepSignal.tex
+++ b/eugene/doc/Doc_PepSignal.tex
@@ -47,18 +47,22 @@ available at\\
 \texttt{http://genoplante-info.infobiogen.fr/predotar/predotar.html}
 
 \paragraph{Gff3 input file format}
-The gff3 input mode is activated by setting the value \texttt{GFF3} for the parameter
-\texttt{PepSignal.format} in the parameter file.
-The plugin reads the predictions of the program from one file which
-name is derived from the sequence name by adding the \texttt{.psignal.gff3}
 
-Accepted features (third column) :
+The gff3 input mode is activated by setting the value \texttt{GFF3}
+for the parameter \texttt{PepSignal.format} in the parameter file.
+The plugin reads the predictions of the program from one file which
+name is derived from the sequence name by adding the
+\texttt{.psignal.gff3} extension.
+
+Accepted features (third column):\\
 \begin{itemize}
 \item  SO:0000318 or start\_codon
 \end{itemize}
-If feature isn't this, line would be rejected. The expected coordinates must correspond to the first nucleotide of the start codon.
+If the feature used isn't one of these, the line will be rejected. The
+expected coordinates must match with the first nucleotide of a
+start codon (ATG).
 
-Here an extract of : seq14ac002535g4g5.tfa.psignal.gff3
+Here an extract of \texttt{seq14ac002535g4g5.tfa.psignal.gff3}:
 \begin{Verbatim}[fontsize=\tiny]
 seq14	PepSignal	SO:0000318	175	175	0.024083	-	.	ID=SO:0000318:seq14.0;
 seq14	PepSignal	SO:0000318	188	188	0.000151	+	.	ID=SO:0000318:seq14.1;
