--- a/eugene/doc/Doc_Repeat.tex
+++ b/eugene/doc/Doc_Repeat.tex
@@ -46,16 +46,18 @@ Here is an extract from a typical \texttt{.ig} file:
 \end{Verbatim}
 
 \paragraph{Gff3 input file format}
-The gff3 input mode is activated by setting the value \texttt{GFF3} for the parameter
-\texttt{Repeat.format} in the parameter file.
-The plugin reads the file which name is derived from the sequence name by adding the \texttt{.ig.gff3}
 
-Accepted features (third column) :
+The gff3 input mode is activated by setting the value \texttt{GFF3}
+for the parameter \texttt{Repeat.format} in the parameter file.  The
+plugin reads the file which name is derived from the sequence name by
+adding the \texttt{.ig.gff3} extension.
+
+Accepted features (third column):\\
 \begin{itemize}
 \item  SO:0000657 or repeat\_region
 \end{itemize}
-If feature isn't this, line would be rejected.
-Here an extract of : seq14ac002535g4g5.tfa.ig.gff3
+If the feature used isn't one of those, the line will be rejected. 
+Here an extract of \texttt{seq14ac002535g4g5.tfa.ig.gff3}.
 \begin{Verbatim}[fontsize=\tiny]
 seq14	RepeatMasker	repeat_region	1	100	.	.	.	ID=repeat_region:seq14.1;
 \end{Verbatim}
