--- a/eugene/NEWS
+++ b/eugene/NEWS
@@ -23,6 +23,9 @@ Version 3.1
 Version 3.2
 
 * Change the functioning of the software (see the ChangeLog file for more detail)
+ Version 3.5
+
+* Integrates complete GFF3 based input/output
 
 -------------------------------------------------------
 Copying information:
