--- a/eugene/doc/Doc_MarkovIMM.tex
+++ b/eugene/doc/Doc_MarkovIMM.tex
@@ -5,14 +5,16 @@
 \paragraph{Description}
 
 This plugin injects coding/intronic/utr/intergenic likelihood as
-modeled by interpolated Markov models (introduced in Glimmer, see S. Salzberg, A. Delcher, S. Kasif, and O. White.{\em Microbial gene identification using interpolated Markov models} Nucleic Acids Research 26:2 (1998), 544-548). These
-models are defined in a so-called matrices file (located in the
-directory specified by the \texttt{EuGene.PluginsDir} parameter) whose
-name is indicated by the \texttt{MarkovIMM.matname}
-parameter. Depending on the matrices file, this may contain IMM for
-exons, introns and intergenic data and also optionnally 5' and 3' UTR
-regions. If these 2 last IMMs are absent from the matrices file,
-intronic models are used for UTR.
+modeled by interpolated Markov models (introduced in Glimmer, see S.
+Salzberg, A. Delcher, S. Kasif, and O. White.{\em Microbial gene
+  identification using interpolated Markov models} Nucleic Acids
+Research 26:2 (1998), 544-548). These models are defined in a
+so-called matrices file (located in the directory specified by the
+\texttt{EuGene.PluginsDir} parameter) whose name is indicated by the
+\texttt{MarkovIMM.matname} parameter. Depending on the matrices file,
+this may contain IMM for exons, introns and intergenic data and also
+optionnally 5' and 3' UTR regions. If these 2 last IMMs are absent
+from the matrices file, intronic models are used for UTR.
 
 The plugin is controlled by two further parameters:
 \texttt{MarkovIMM.minGC} and \texttt{MarkovIMM.maxGC} which indicate
@@ -24,9 +26,20 @@ By instanciating multiple \texttt{MarkovIMM} plugins (see
 section~\ref{plug}), this enables the use of several IMM according to
 the GC\% of the input sequence. 
 
-Instead of using a specific intergenic IMM, it is possible to simply
-use the sequence GC\% as the basis for a $O^{th}$ order Markov model
-by setting \texttt{MarkovIMM.UseM0asIG} to \texttt{1}.
+The intergenic track can receive score in three possible ways
+according to the \texttt{IntergenicModel} parameter value~:
+\begin{enumerate}
+\item[0] In this case, a $O^{th}$ order Markov model that is directly
+  estimated from the frequencies in the sequence is used.
+\item[1] The intergenic IMM matrix is directly used on the forward
+  strand. This model will give a slightly different score to the
+  sequence and to its reverse complement but is simple and works well
+  on some organisms.
+\item [2] The intergenic model is used on both strands and the mean of
+  the two prababilities (forward and reverse) is used as the
+  estimation. This is the default model to use. It has the advantage
+  of giving the same score to a sequence and its reverse complement.
+\end{enumerate}
 
 The sensor is activated by either:
 \begin{itemize}
