new low level region type: interg in basic GFF format

--- a/eugene/doc/Doc_AnnotaStruct.tex
+++ b/eugene/doc/Doc_AnnotaStruct.tex
@@ -107,6 +107,7 @@ between $0.0$ and $1.0$ preceded by the letter $p$ (like probability).
 
 For contents edges, the following features are recognized:
 \begin{itemize}
+\item \texttt{interg}: for non transcribed regions
 \item \texttt{exon}: for coding exons.
 \item \texttt{intron}: for introns separating coding exons.
 \item \texttt{utr5}: for 5' UTR (untranslated terminal regions).
