--- a/eugene/README
+++ b/eugene/README
@@ -5,4 +5,5 @@ a  certification  mark  of  the  Open Source  Initiative.   eugene  is
 governed by the ARTISTIC  LICENSE (see www.opensource.org). Please see
 the file COPYING for details.  For documentation, please see the files
 in the  doc subdirectory.  For building  and installation instructions
-please see the INSTALL file.
+please see the INSTALL file. For creating a new eugene release, please
+see the RELEASE file.
